# hello-tonic

./: .protolint.yaml  Cargo.toml  README.md
proto/: hello.proto  person.proto
src/: client.rs  server.rs
