[package]
name = "hello-tonic"
version = "0.1.0"
authors = ["Majedul Hoque <rumanbsl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4.0"
prost = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"] }

[[bin]]
name = "hello-server"
path = "src/server.rs"

[[bin]]
name = "hello-client"
path = "src/client.rs"
